# VikingVision

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: mdbook.yml  rust.yml
apriltag-sys/: build.rs
bins/vv-cli/: Cargo.toml
bins/vv-cli/src/: main.rs
bins/vv-pg/: Cargo.toml
bins/vv-pg/src/: camera.rs  daemon.rs  derived.rs  main.rs  range_slider.rs
cli/: Cargo.toml
cli/src/: main.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/camera/: frame.md
docs/src/cameras/: frame.md  overview.md  v4l.md
docs/src/components/: apriltag.md  blobs.md  box-blur.md  clone.md  collect-vec.md  color-filter.md  color-space.md  debug.md  detect-pose.md  draw.md  ffmpeg.md  filter.md  fps.md  gaussian-blur.md  ntable.md  overview.md  percent-filter.md  resize.md  select-last.md  unpack.md  vision-debug.md  wrap-mutex.md
docs/src/config/: debug.md  ntable.md  overview.md  run.md  types.md
docs/src/guide/: install.md  pipelines.md  playground.md
examples/: apriltags.toml  collect.rs  common.rs  pipelines.rs  save-fpscount.toml
gui/: Cargo.toml
gui/src/: camera.rs  dispatch.rs  dyn_elem.rs  edit.rs  editor.rs  main.rs  map.rs
gui/src/nt/: disabled.rs  enabled.rs  mod.rs
gui/src/trace/: color.rs  mod.rs
gui/src/visit/: log.rs  mod.rs
libs/vv-apriltag/: Cargo.toml
libs/vv-apriltag/src/: lib.rs
libs/vv-camera/: Cargo.toml
libs/vv-camera/src/: capture.rs  frame.rs  lib.rs
libs/vv-ntable/: Cargo.toml
libs/vv-ntable/examples/: ntable.rs
libs/vv-ntable/src/: lib.rs  protocol.rs  team.rs
libs/vv-pipelines/: Cargo.toml
libs/vv-pipelines/examples/: collect.rs  common.rs  pipelines.rs
libs/vv-pipelines/src/: component_filter.rs  configure.rs  lib.rs
libs/vv-pipelines/src/components/: apriltag.rs  collect.rs  draw.rs  ffmpeg.rs  group.rs  mod.rs  ntable.rs  utils.rs  vision.rs
libs/vv-pipelines/src/pipeline/: daemon.rs  graph.rs  mod.rs  serialized.rs
libs/vv-pipelines/src/pipeline/component/: impl_apriltag.rs  impl_utils.rs  impl_vision.rs  mod.rs
libs/vv-pipelines/src/pipeline/runner/: context.rs  input.rs  mod.rs  run.rs  tests.rs
libs/vv-utils/: Cargo.toml
libs/vv-utils/src/: common_types.rs  geom.rs  lib.rs  mutex.rs  utils.rs
libs/vv-vision/: Cargo.toml
libs/vv-vision/src/: draw.rs  lib.rs
libs/vv-vision/src/buffer/: mod.rs
libs/vv-vision/src/buffer/conv/: tests.rs
libs/vv-vision/src/vision/: blobs.rs  color.rs  mod.rs
libs/vv-vision/src/vision_debug/: mod.rs
ntable/: Cargo.toml
ntable/examples/: ntable.rs
ntable/src/: lib.rs  team.rs  value.rs
pg/: Cargo.toml
pg/src/: camera.rs  derived.rs  main.rs  range_slider.rs
src/: apriltag.rs  broadcast.rs  component_filter.rs  content.rs  draw.rs  geom.rs  lib.rs  registry.rs  serialized.rs  tasks.rs  utils.rs
src/apriltag/: mod.rs  tests.rs
src/buffer/: mod.rs
src/buffer/conv/: gray.rs  hsv.rs  luma.rs  mod.rs  rgb.rs  tests.rs  ycc.rs  yuyv.rs
src/camera/: capture.rs  config.rs  frame.rs  mod.rs
src/components/: apriltag.rs  collect.rs  draw.rs  ffmpeg.rs  group.rs  mod.rs  ntable.rs  utils.rs  vision.rs
src/pipeline/: component.rs  daemon.rs  graph.rs  mod.rs  runner.rs  serialized.rs
src/pipeline/runner/: context.rs  deps.rs  input.rs  lazy_maps.rs  mod.rs  run.rs  tests.rs
src/vision/: blobs.rs  color.rs  mod.rs  tests.rs
src/vision_debug/: dispatch.rs  mod.rs  with_winit.rs  without_winit.rs
