[workspace]
members = [
    "libs/apriltag-sys",
    "libs/vv-apriltag",
    "libs/vv-camera",
    "libs/vv-ntable",
    "libs/vv-pipelines",
    "libs/vv-utils",
    "libs/vv-vision",
    "bins/vv-cli",
    "bins/vv-gui",
    "bins/vv-pg"
]

[workspace.package]
version = "0.1.0"
license = "GPL-3.0-or-later"
edition = "2024"

[package]
name = "viking-vision"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
humantime-serde = { workspace = true, optional = true }
rayon.workspace = true
serde = { workspace = true, optional = true }
tracing.workspace = true
vv-camera = { workspace = true, features = ["supply"] }
vv-ntable = { workspace = true, optional = true }
vv-pipelines = { workspace = true, features = ["supply", "vision"] }
vv-utils = { workspace = true, optional = true }
vv-vision = { workspace = true, default-features = false }

[features]
default = ["all-components", "debug-gui", "serde", "v4l"]
all-components = ["apriltag", "ntable", "vv-pipelines/all-components"]
apriltag = ["vv-pipelines/apriltag"]
components = ["vv-pipelines/components"]
debug-gui = ["vv-vision/debug-gui"]
debug-tools = ["vv-utils/debug-tools"]
ntable = ["dep:vv-ntable", "vv-pipelines/ntable"]
serde = ["dep:serde", "dep:humantime-serde", "vv-camera/serde", "vv-pipelines/serde"]
v4l = ["vv-camera/v4l", "vv-vision/v4l"]

[workspace.dependencies]
disqualified = "1.0.0"
eframe = { version = "0.33.2", features = ["persistence"] }
humantime-serde = "1.1.1"
polonius-the-crab = "0.5.0"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
smallvec = { version = "1.15.1", features = ["const_new", "drain_filter"] }
smol_str = "0.3.4"
supply = "0.3.1"
thiserror = "2.0"
time = { version = "0.3.44", features = ["formatting", "local-offset"] }
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = "0.3.20"
ty-tag = "0.1.1"
typetag = "0.2.21"
v4l = "0.14.0"
viking-vision = { path = ".", default-features = false }
vv-apriltag = { path = "./libs/vv-apriltag", default-features = false }
vv-camera = { path = "./libs/vv-camera", default-features = false }
vv-ntable = { path = "./libs/vv-ntable", default-features = false }
vv-pipelines = { path = "./libs/vv-pipelines", default-features = false }
vv-utils = { path = "./libs/vv-utils" }
vv-vision = { path = "./libs/vv-vision", default-features = false }

