[package]
name = "vv-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
matchers = "0.2.0"
rayon.workspace = true
time.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
viking-vision.workspace = true
