[package]
name = "vv-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
matchers = "0.2.0"
rayon.workspace = true
time.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
viking-vision.workspace = true

[features]
default = ["apriltag", "debug-gui", "ntable", "v4l"]
apriltag = ["viking-vision/apriltag"]
v4l = ["viking-vision/v4l"]
ntable = ["viking-vision/ntable"]
debug-tools = ["viking-vision/debug-tools"]
debug-gui = ["viking-vision/debug-gui"]
