[package]
name = "vv-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eframe = { version = "0.32.3", features = ["persistence"] }
egui_extras = "0.32.3"
ron = "0.11.0"
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
v4l = { workspace = true, optional = true }
viking-vision.workspace = true

[features]
default = ["v4l"]
v4l = ["dep:v4l", "viking-vision/v4l"]