[package]
name = "vv-gui"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
eframe.workspace = true
egui_extras.workspace = true
matchers = "0.2.0"
rfd.workspace = true
time.workspace = true
toml_parser = "1.0.4"
tracing.workspace = true
tracing-log = "0.2.0"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
