[package]
name = "vv-gui"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
eframe.workspace = true
egui_extras.workspace = true
matchers = "0.2.0"
ntable = { version = "0.1.0", path = "../ntable", optional = true }
rfd.workspace = true
time.workspace = true
toml_parser = { version = "1.0.4", git = "https://github.com/matt-cornell/toml.git" } # I need more things in the API
tracing.workspace = true
tracing-log = "0.2.0"
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
default = ["ntable"]
ntable = ["dep:ntable"]
