[package]
name = "ntable"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
futures-util = "0.3.31"
rmp = "0.8.14"
serde.workspace = true
serde_json.workspace = true
smol_str.workspace = true
tokio = { version = "1.48.0", features = ["rt", "sync", "time"] }
tokio-tungstenite = "0.28.0"
tracing.workspace = true
triomphe.workspace = true
tungstenite = "0.28.0"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
