[package]
name = "vv-pg"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eframe.workspace = true
egui_extras = "0.33.0"
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
v4l = { workspace = true, optional = true }
viking-vision.workspace = true

[features]
default = ["apriltag", "v4l"]
apriltag = ["viking-vision/apriltag"]
v4l = ["dep:v4l", "viking-vision/v4l"]
