[package]
name = "vv-pg"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eframe.workspace = true
egui_extras = "0.33.0"
rfd = "0.17.1"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
v4l = { workspace = true, optional = true }
vv-apriltag = { workspace = true, optional = true, features = ["serde"] }
vv-camera.workspace = true
vv-utils.workspace = true
vv-vision = { workspace = true, features = ["serde"] }

[features]
default = ["apriltag", "v4l"]
apriltag = ["dep:vv-apriltag"]
v4l = ["dep:v4l", "vv-camera/v4l", "vv-vision/v4l"]
