[package]
name = "vv-utils"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
no_deadlocks = { version = "1.3.2", optional = true }
serde = { workspace = true, optional = true }
supply = { workspace = true, optional = true }
ty-tag = { workspace = true, optional = true }

[features]
debug-tools = ["dep:no_deadlocks"]
serde = ["dep:serde"]
supply = ["dep:supply", "dep:ty-tag"]